[package]
name = "rlpx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = "0.8.2"
byteorder = "1.4.3"
bytes = "1.3.0"
ctr = "0.9.2"
hex = "0.4.3"
hmac = "0.12.1"
primitive-types = "0.12.1"
rlp = "0.5.2"
secp256k1 = { version = "0.25.0", features = [
  "global-context",
  "rand-std",
  "recovery",
] }
sha2 = "0.10.6"
sha3 = "0.10.6"
tokio = { version = "1.24.1", features = ["full"] }
